<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/L1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/resultField1"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn9"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn6"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn3"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPoint.1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="dotPress"
                android:text="@string/btnPoint"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/resultField"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn9"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSin"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btnSin"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn6"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnCos"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btnCos"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTan"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btnTan"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="numPress"
                android:text="@string/btn0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="dotPress"
                android:text="@string/btnPoint"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnLg"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btnLg"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnLn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btnLn"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/openingBracket"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/openingBracket"
                android:textSize="24sp" />

            <Button
                android:id="@+id/closingBracket"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/closingBracket"
                android:textSize="24sp" />

            <Button
                android:id="@+id/deg"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/deg"
                android:textSize="24sp" />

            <Button
                android:id="@+id/e"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/e"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changeOfView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/changeOfView"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>